# lighthouse

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.reproducible  Makefile  clippy.toml  deny.toml  wordlist.txt
beacon_node/: Cargo.toml
beacon_node/beacon_chain/: Cargo.toml
beacon_node/beacon_chain/benches/: benches.rs
beacon_node/beacon_chain/src/: attestation_rewards.rs  attestation_verification.rs  attester_cache.rs  beacon_block_reward.rs  beacon_block_streamer.rs  beacon_chain.rs  beacon_fork_choice_store.rs  beacon_proposer_cache.rs  beacon_snapshot.rs  bellatrix_readiness.rs  blob_verification.rs  block_times_cache.rs  block_verification.rs  block_verification_types.rs  builder.rs  canonical_head.rs  chain_config.rs  custody_context.rs  data_availability_checker.rs  data_column_verification.rs  early_attester_cache.rs  envelope_times_cache.rs  envelope_verification.rs  envelope_verification_types.rs  errors.rs  events.rs  execution_payload.rs  gloas_readiness.rs  graffiti_calculator.rs  historical_blocks.rs  historical_data_columns.rs  invariants.rs  kzg_utils.rs  lib.rs  light_client_finality_update_verification.rs  light_client_optimistic_update_verification.rs  metrics.rs  migrate.rs  naive_aggregation_pool.rs  observed_aggregates.rs  (+19 more)
beacon_node/beacon_chain/tests/: attestation_production.rs  attestation_verification.rs  bellatrix.rs  blob_verification.rs  block_verification.rs  capella.rs  column_verification.rs  events.rs  main.rs  op_verification.rs  payload_invalidation.rs  prepare_payload.rs  rewards.rs  schema_stability.rs  store_tests.rs  sync_committee_verification.rs  tests.rs  validator_monitor.rs
beacon_node/beacon_processor/src/: lib.rs
beacon_node/builder_client/: Cargo.toml
beacon_node/builder_client/src/: lib.rs
beacon_node/client/: Cargo.toml
beacon_node/client/src/: builder.rs  compute_light_client_updates.rs  config.rs  metrics.rs  notifier.rs
beacon_node/execution_layer/: Cargo.toml
beacon_node/execution_layer/src/: engine_api.rs  lib.rs  metrics.rs  versioned_hashes.rs
beacon_node/genesis/: Cargo.toml
beacon_node/genesis/src/: common.rs  interop.rs
beacon_node/http_api/: Cargo.toml
beacon_node/http_api/src/: attestation_performance.rs  block_id.rs  block_packing_efficiency.rs  builder_states.rs  custody.rs  database.rs  lib.rs  light_client.rs  produce_block.rs  proposer_duties.rs  ptc_duties.rs  publish_attestations.rs  publish_blocks.rs  state_id.rs  sync_committee_rewards.rs  sync_committees.rs  test_utils.rs  ui.rs  utils.rs  version.rs
beacon_node/http_api/tests/: broadcast_validation_tests.rs  fork_tests.rs  interactive_tests.rs  status_tests.rs  tests.rs
beacon_node/http_metrics/: Cargo.toml
beacon_node/http_metrics/src/: metrics.rs
beacon_node/lighthouse_network/: Cargo.toml
beacon_node/lighthouse_network/src/: config.rs  lib.rs  metrics.rs
beacon_node/lighthouse_network/tests/: common.rs  main.rs  rpc_tests.rs
beacon_node/lighthouse_tracing/src/: lib.rs
beacon_node/network/: Cargo.toml
beacon_node/network/src/: metrics.rs  router.rs  service.rs  status.rs
beacon_node/operation_pool/: Cargo.toml
beacon_node/operation_pool/src/: attestation.rs  attestation_storage.rs  bls_to_execution_changes.rs  lib.rs  persistence.rs  reward_cache.rs
beacon_node/src/: cli.rs  config.rs  lib.rs
beacon_node/store/: Cargo.toml
beacon_node/store/src/: chunked_vector.rs  config.rs  consensus_context.rs  errors.rs  hdiff.rs  hot_cold_store.rs  impls.rs  invariants.rs  iter.rs  lib.rs  metadata.rs  partial_beacon_state.rs  reconstruct.rs  state_cache.rs
boot_node/: Cargo.toml
boot_node/src/: config.rs  server.rs
common/deposit_contract/: Cargo.toml  build.rs
common/deposit_contract/src/: lib.rs
common/eip_3076/: Cargo.toml
common/eip_3076/src/: lib.rs
common/eth2/: Cargo.toml
common/eth2/src/: beacon_response.rs  error.rs  lib.rs  lighthouse.rs  types.rs
common/eth2_network_config/: Cargo.toml
common/eth2_network_config/src/: lib.rs
common/lighthouse_version/: Cargo.toml  build.rs
common/lighthouse_version/src/: lib.rs
common/logging/: Cargo.toml
common/logging/src/: lib.rs  tracing_logging_layer.rs
common/malloc_utils/: Cargo.toml
common/network_utils/: Cargo.toml
common/network_utils/src/: discovery_metrics.rs  enr_ext.rs  lib.rs  listen_addr.rs
common/task_executor/: Cargo.toml
common/task_executor/src/: lib.rs  rayon_pool_provider.rs
common/warp_utils/: Cargo.toml
common/warp_utils/src/: lib.rs  reject.rs  status_code.rs
consensus/fork_choice/: Cargo.toml
consensus/fork_choice/src/: fork_choice.rs  lib.rs
consensus/fork_choice/tests/: tests.rs
consensus/proto_array/: Cargo.toml
consensus/proto_array/src/: bin.rs  error.rs  fork_choice_test_definition.rs  lib.rs  proto_array.rs  proto_array_fork_choice.rs  ssz_container.rs
consensus/state_processing/: Cargo.toml
consensus/state_processing/src/: all_caches.rs  block_replayer.rs  consensus_context.rs  envelope_processing.rs  epoch_cache.rs  genesis.rs  lib.rs  per_block_processing.rs  per_epoch_processing.rs  per_slot_processing.rs  state_advance.rs  upgrade.rs  verify_operation.rs
consensus/types/: Cargo.toml
consensus/types/benches/: benches.rs
consensus/types/src/: attestation.rs  attester_slashing.rs  beacon_block.rs  beacon_block_body.rs  beacon_response.rs  beacon_state.rs  blob_sidecar.rs  builder_bid.rs  builder_pending_payment.rs  builder_pending_withdrawal.rs  chain_spec.rs  config_and_preset.rs  contribution_and_proof.rs  data_column_custody_group.rs  data_column_sidecar.rs  data_column_subnet_id.rs  dumb_macros.rs  epoch_cache.rs  eth_spec.rs  execution_bid.rs  execution_block_hash.rs  fork_context.rs  (+32 more)
crypto/kzg/: Cargo.toml
lighthouse/: Cargo.toml
lighthouse/src/: main.rs
lighthouse/tests/: account_manager.rs  beacon_node.rs  boot_node.rs  exec.rs  validator_client.rs  validator_manager.rs
testing/ef_tests/: Cargo.toml  Makefile  check_all_files_accessed.py  download_test_vectors.sh
testing/execution_engine_integration/: Cargo.toml
(+539 files in other folders)
