[package]
name = "beacon_node"
version = "8.0.0-rc.1"
authors = [
    "Paul Hauner <paul@paulhauner.com>",
    "Age Manning <Age@AgeManning.com",
]
edition = { workspace = true }

[lib]
name = "beacon_node"
path = "src/lib.rs"

[features]
write_ssz_files = [
    "beacon_chain/write_ssz_files",
] # Writes debugging .ssz files to /tmp during block processing.
testing = [] # Enables testing-only CLI flags

[dependencies]
account_utils = { workspace = true }
beacon_chain = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
client = { path = "client" }
directory = { workspace = true }
dirs = { workspace = true }
environment = { workspace = true }
eth2_config = { workspace = true }
execution_layer = { workspace = true }
genesis = { workspace = true }
hex = { workspace = true }
http_api = { workspace = true }
hyper = { workspace = true }
lighthouse_network = { workspace = true }
monitoring_api = { workspace = true }
network_utils = { workspace = true }
sensitive_url = { workspace = true }
serde_json = { workspace = true }
slasher = { workspace = true }
store = { workspace = true }
strum = { workspace = true }
task_executor = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }

[dev-dependencies]
node_test_rig = { path = "../testing/node_test_rig" }
