[package]
name = "boot_node"
version = "8.0.0-rc.1"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = { workspace = true }

[dependencies]
beacon_node = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
eth2_network_config = { workspace = true }
ethereum_ssz = { workspace = true }
hex = { workspace = true }
lighthouse_network = { workspace = true }
log = { workspace = true }
logging = { workspace = true }
network_utils = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }
