[package]
name = "client"
version = "0.2.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = { workspace = true }

[dependencies]
beacon_chain = { workspace = true }
beacon_processor = { workspace = true }
directory = { workspace = true }
dirs = { workspace = true }
environment = { workspace = true }
eth2 = { workspace = true }
eth2_config = { workspace = true }
ethereum_ssz = { workspace = true }
execution_layer = { workspace = true }
futures = { workspace = true }
genesis = { workspace = true }
http_api = { workspace = true }
http_metrics = { path = "../http_metrics" }
kzg = { workspace = true }
lighthouse_network = { workspace = true }
logging = { workspace = true }
metrics = { workspace = true }
monitoring_api = { workspace = true }
network = { workspace = true }
rand = { workspace = true }
sensitive_url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slasher = { workspace = true }
slasher_service = { path = "../../slasher/service" }
slot_clock = { workspace = true }
store = { workspace = true }
task_executor = { workspace = true }
time = "0.3.5"
timer = { path = "../timer" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }

[dev-dependencies]
operation_pool = { workspace = true }
state_processing = { workspace = true }
tokio = { workspace = true }
yaml_serde = { workspace = true }
