[package]
name = "genesis"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

[dependencies]
bls = { workspace = true }
ethereum_hashing = { workspace = true }
ethereum_ssz = { workspace = true }
int_to_bytes = { workspace = true }
merkle_proof = { workspace = true }
rayon = { workspace = true }
state_processing = { workspace = true }
tracing = { workspace = true }
tree_hash = { workspace = true }
types = { workspace = true }
