[package]
name = "lighthouse_network"
version = "0.2.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = { workspace = true }
autotests = false

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
bls = { workspace = true }
bytes = { workspace = true }
delay_map = { workspace = true }
directory = { workspace = true }
dirs = { workspace = true }
discv5 = { workspace = true }
either = { workspace = true }
eth2 = { workspace = true, features = ["lighthouse"] }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
fixed_bytes = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
# Enable partial messages feature
gossipsub = { package = "libp2p-gossipsub", git = "https://github.com/libp2p/rust-libp2p.git", features = ["partial_messages"] }
hex = { workspace = true }
if-addrs = "0.14"
itertools = { workspace = true }
libp2p = { workspace = true }
libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p.git" }
lighthouse_version = { workspace = true }
logging = { workspace = true }
lru = { workspace = true }
lru_cache = { workspace = true }
metrics = { workspace = true }
network_utils = { workspace = true }
parking_lot = { workspace = true }
prometheus-client = "0.24.0"
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
snap = { workspace = true }
ssz_types = { workspace = true }
strum = { workspace = true }
superstruct = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }
unsigned-varint = { version = "0.8", features = ["codec"] }

[dev-dependencies]
async-channel = { workspace = true }
logging = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "lighthouse_network_tests"
path = "tests/main.rs"
