[package]
name = "operation_pool"
version = "0.2.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = { workspace = true }

[features]
portable = ["beacon_chain/portable"]

[dependencies]
bitvec = { workspace = true }
bls = { workspace = true }
educe = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
fixed_bytes = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
state_processing = { workspace = true }
store = { workspace = true }
superstruct = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }

[dev-dependencies]
beacon_chain = { workspace = true }
maplit = { workspace = true }
tokio = { workspace = true }
