[package]
name = "eth2_network_config"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

build = "build.rs"

[dependencies]
bytes = { workspace = true }
discv5 = { workspace = true }
eth2_config = { workspace = true }
fixed_bytes = { workspace = true }
kzg = { workspace = true }
pretty_reqwest_error = { workspace = true }
reqwest = { workspace = true }
sensitive_url = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
url = { workspace = true }

[build-dependencies]
eth2_config = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
ethereum_ssz = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
